force-app/main/default/objects/EndPoint_Factura__mdt/fields/contrasena__c.field-meta.xml
<CustomField>
    <fullName>contrasena__c</fullName>
    <label>contrasena</label>
    <length>50</length>
    <type>Text</type>
</CustomField>