force-app/main/default/objects/EndPoint_Factura__mdt/fields/numeroSerie__c.field-meta.xml
<CustomField>
    <fullName>numeroSerie__c</fullName>
    <label>numeroSerie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>