force-app/main/default/objects/EndPoint_Factura__mdt/fields/rutCliente__c.field-meta.xml
<CustomField>
    <fullName>rutCliente__c</fullName>
    <label>rutCliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>