force-app/main/default/objects/EndPoint_Factura__mdt/fields/rutUsuario__c.field-meta.xml
<CustomField>
    <fullName>rutUsuario__c</fullName>
    <label>rutUsuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>