force-app/main/default/objects/EndPoint_Factura__mdt/fields/sistema__c.field-meta.xml
<CustomField>
    <fullName>sistema__c</fullName>
    <label>sistema</label>
    <length>50</length>
    <type>Text</type>
</CustomField>